--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,57 @@
-<p>login works!</p>
+<!-- <app-header [showLogoOnly]="showLogoOnly"></app-header> -->
+<section class="mmf-login">
+    <div class="container login-container">
+        <div class="text-center">
+            <h1>{{ 'LOGIN.LOGIN_TITLE' }}</h1>
+            <!-- <p>لوريم أىبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض على العميل ليتصور</p> -->
+        </div>
+        <div class="login-form">
+            <form [formGroup]="loginForm" (ngSubmit)="login()">
+                <!-- if input has error add class (has-error) to form-group-->
+                <div class="form-group mb-4">
+                    <label class="form-label">{{
+                        'LOGIN.USERNAME'
+                        }}</label>
+                    <input class="form-control" id="username" type="text" formControlName="username"
+                        [placeholder]="'LOGIN.USERNAME' " />
+
+                </div>
+
+                <div class="form-group mb-4 input-with-icon">
+                    <label class="form-label" for="password">{{ 'LOGIN.PASSWORD' }}
+                    </label>
+                    <input class="form-control" id="password" [type]="fieldTextType ? 'text' : 'password'"
+                        placeholder="*********" formControlName="password" />
+
+                    <a (click)="togglePassword()" class="password-show" [class.hide]="classApplied"><i
+                            class="icon-eye"></i>
+                    </a>
+                </div>
+
+                <div class="forget-password have-problem">
+                    <a href="/reset-password">{{
+                        'LOGIN.FORGET_PASSWORD_REDIRECT'
+                        }}</a>
+                </div>
+
+                <div class="error-message" *ngIf="errorMessage">
+                    {{ errorMessage }}
+                </div>
+
+                <div class="text-center mt-3">
+                    <button [disabled]="
+                            loginForm.invalid || processingRequest
+                        " type="submit" color="primary" expand="block" class="btn btn-success btn-lg btn-block">
+                        {{ 'LOGIN.LOGIN_TITLE' }}
+                    </button>
+                </div>
+            </form>
+            <div class="have-problem">
+                <span>{{ 'LOGIN.LOGIN_PROBLEM' }}</span>
+                <a href="">{{
+                    'LOGIN.LOGIN_HELPDESK'
+                    }}</a>
+            </div>
+        </div>
+    </div>
+</section>
