--- a/src/app/safety-check/safety-check.component.html
+++ b/src/app/safety-check/safety-check.component.html
@@ -39,7 +39,7 @@
 
         <div class="row">
             <!-- topic -->
-            <div class="col-lg-12 col-md-4 col-sm-6 mb-4">
+            <div class="col-lg-12 col-md-12 mb-4">
                 <div class="card">
                     <div class="card-body">
                         <nav class="nav nav-pills mb-4">
