--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -1,5 +1,5 @@
  
-<section class="section">
+<!-- <section class="section">
   <div class="container">
      <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
@@ -26,7 +26,7 @@
     </div>
   </div>
 </section>
-
+ -->
 
 <section class="section">
   <div class="container">
