--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,20 +1,25 @@
- 
-
 <section class="section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <h2 class="mb-5 font-weight-medium">
-         Eu adipisicing aliquip est qui.
-        </h2>
+        <h2 class="mb-5 font-weight-medium">Welcome Sara</h2>
         <div class="p-5 shadow rounded">
           <div class="d-flex justify-content-center">
             <div class="text-center m-5">
-              <img class="" src="../assets/images/682044.png" width="150" height="150" />
+              <img
+                class=""
+                src="../assets/images/682044.png"
+                width="100"
+                height="100"
+              />
               <h3 class="mb-0 mt-3">Need Help</h3>
             </div>
             <div class="text-center m-5">
-              <img src="../assets/images/1067447.png" width="150" height="150"/>
+              <img
+                src="../assets/images/1067447.png"
+                width="100"
+                height="100"
+              />
               <h3 class="mb-0 mt-3">Thanks, I'm Ok</h3>
             </div>
           </div>
@@ -26,41 +31,34 @@
 
 <section class="section">
   <div class="container">
-    
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow rounded content">
           <h2 class="section-title">Need Help</h2>
-          <form  action="/user-profile">
-            
-          <p>Please provide us with more details </p>
-              <div class="form-group mb-3">
-                  <label for="">Details (optional)</label>
-                  <textarea class="form-control" name="" id="" rows="3"></textarea>
-                </div>
+          <form action="/user-profile">
+            <p>Please provide us with more details</p>
+            <div class="form-group mb-3">
+              <label for="">Details (optional)</label>
+              <textarea class="form-control" name="" id="" rows="3"></textarea>
+            </div>
             <button type="submit" class="btn btn-primary mt-3">Send</button>
           </form>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
 </section>
 <section class="section">
   <div class="container">
-    
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow rounded content">
-       
-          
-            
-          <div>Message ... Aute nisi Lorem veniam nisi ea ad velit occaecat. </div>
-              
-             
-          
-        </div> 
+          <div>
+            Your message was sent successfully Our hr representative will
+            contact you shortly
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
-
