--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
- 
 /*------------------------------------------------------------------
 [TABLE OF CONTENTS]
 -------------------------------------------------------------------*/
@@ -12,7 +11,8 @@ body {
   color: #333;
 }
 
-p, .paragraph {
+p,
+.paragraph {
   font-weight: 400;
   color: #333;
   font-size: 16px;
@@ -20,57 +20,71 @@ p, .paragraph {
   font-family: "Montserrat", sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #222;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
   line-height: 1.2;
 }
 
-h1, .h1 {
+h1,
+.h1 {
   font-size: 50px;
   font-weight: 800;
 }
 @media (max-width: 575px) {
-  h1, .h1 {
+  h1,
+  .h1 {
     font-size: 36px;
     font-weight: 600;
   }
   .section {
     padding-top: 80px;
     padding-bottom: 80px;
-}
+  }
 }
 
-h2, .h2 {
+h2,
+.h2 {
   font-size: 42px;
   font-weight: 800;
 }
 @media (max-width: 575px) {
-  h2, .h2 {
+  h2,
+  .h2 {
     font-size: 32px;
     font-weight: 600;
   }
 }
 
-h3, .h3 {
+h3,
+.h3 {
   font-size: 32px;
 }
 @media (max-width: 575px) {
-  h3, .h3 {
+  h3,
+  .h3 {
     font-size: 28px;
   }
 }
 
-h4, .h4 {
+h4,
+.h4 {
   font-size: 26px;
 }
 
-h5, .h5 {
+h5,
+.h5 {
   font-size: 22px;
 }
 
-h6, .h6 {
+h6,
+.h6 {
   font-size: 18px;
 }
 
@@ -87,7 +101,9 @@ h6, .h6 {
   transition: 0.2s ease;
   font-weight: 600;
 }
-.btn:hover, .btn:active, .btn:focus {
+.btn:hover,
+.btn:active,
+.btn:focus {
   outline: 0;
   box-shadow: none !important;
 }
@@ -101,7 +117,11 @@ h6, .h6 {
   color: #fff;
   border-color: #ff7900;
 }
-.btn-primary:active, .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary.active {
+.btn-primary:active,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary.active {
   background: #cc0036 !important;
   border-color: #cc0036 !important;
 }
@@ -111,7 +131,11 @@ h6, .h6 {
   color: #ff7900;
   border-color: #ff7900;
 }
-.btn-outline-primary:active, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary.focus, .btn-outline-primary.active {
+.btn-outline-primary:active,
+.btn-outline-primary:hover,
+.btn-outline-primary:focus,
+.btn-outline-primary.focus,
+.btn-outline-primary.active {
   background: #cc0036 !important;
   border-color: #cc0036 !important;
   color: #fff;
@@ -206,7 +230,7 @@ a:hover {
 }
 
 .border-default {
-  border-color: #E2E2E2 !important;
+  border-color: #e2e2e2 !important;
 }
 
 /* overlay */
@@ -228,11 +252,16 @@ a:hover {
   outline: 0 !important;
 }
 
-.rounded, .card-icon, .card {
+.rounded,
+.card-icon,
+.card {
   border-radius: 12px !important;
 }
 
-.shadow, .card, .search-wrapper .form-control, .navigation.nav-bg {
+.shadow,
+.card,
+.search-wrapper .form-control,
+.navigation.nav-bg {
   box-shadow: 0px 15px 60px rgba(62, 62, 62, 0.102) !important;
 }
 
@@ -437,7 +466,7 @@ a:hover {
 
 /* sidenav */
 .sidenav {
-  border-right: 1px solid #E2E2E2;
+  border-right: 1px solid #e2e2e2;
   padding-right: 20px;
 }
 .sidenav ul {
@@ -451,7 +480,7 @@ a:hover {
   font-weight: 500;
 }
 .sidenav > li:not(:last-child) {
-  border-bottom: 1px solid #E2E2E2;
+  border-bottom: 1px solid #e2e2e2;
 }
 .sidenav .sidelist ul {
   display: none;
@@ -522,7 +551,7 @@ a:hover {
 }
 
 .code-tabs {
-  border: 1px solid #E2E2E2;
+  border: 1px solid #e2e2e2;
   overflow: hidden;
   margin-bottom: 20px;
 }
@@ -531,7 +560,7 @@ a:hover {
 }
 .code-tabs .nav-tabs .nav-item {
   padding-left: 0;
-  border-right: 1px solid #E2E2E2;
+  border-right: 1px solid #e2e2e2;
 }
 .code-tabs .nav-tabs .nav-item .nav-link {
   text-decoration: none;
@@ -595,7 +624,7 @@ pre .copy-to-clipboard {
   color: #ff7900;
 }
 .search-item:not(:last-child) {
-  border-bottom: 1px solid #E2E2E2;
+  border-bottom: 1px solid #e2e2e2;
 }
 
 .form-group label {
@@ -606,7 +635,7 @@ pre .copy-to-clipboard {
   height: 40px;
   background: transparent;
   border: 0;
-  border-bottom: 1px solid #E2E2E2;
+  border-bottom: 1px solid #e2e2e2;
   border-radius: 0;
   padding: 10px 0;
 }
@@ -638,15 +667,15 @@ pre .copy-to-clipboard {
   padding: 5px 10px;
 }
 .badge.added {
-  background: #3778FF;
+  background: #3778ff;
   color: #fff;
 }
 .badge.fixed {
-  background: #F54773;
+  background: #f54773;
   color: #fff;
 }
 .badge.changed {
-  background: #3AAA55;
+  background: #3aaa55;
   color: #fff;
 }
 .badge.depricated {
@@ -658,11 +687,11 @@ pre .copy-to-clipboard {
   color: #fff;
 }
 .badge.security {
-  background: #F53535;
+  background: #f53535;
   color: #fff;
 }
 .badge.unreleased {
-  background: #A037FF;
+  background: #a037ff;
   color: #fff;
 }
 
@@ -678,7 +707,7 @@ pre .copy-to-clipboard {
 }
 
 :not(.highlight) pre {
-  background: #FBFBFB;
+  background: #fbfbfb;
 }
 
 .content h1,
@@ -726,7 +755,7 @@ pre .copy-to-clipboard {
   width: 100%;
   max-width: 100%;
   margin-bottom: 1rem;
-  border: 1px solid #EEEEEE;
+  border: 1px solid #eeeeee;
 }
 .content table td,
 .content table th {
@@ -735,17 +764,17 @@ pre .copy-to-clipboard {
   margin-bottom: 0;
 }
 .content tr:not(:last-child) {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
 }
 .content th {
   font-weight: 500;
 }
 .content thead {
-  background: #FBFBFB;
+  background: #fbfbfb;
   margin-bottom: 0;
 }
 .content thead tr {
-  border-bottom: 1px solid #EEEEEE;
+  border-bottom: 1px solid #eeeeee;
 }
 .content tbody {
   background: #fff;
@@ -781,8 +810,8 @@ pre .copy-to-clipboard {
   left: 2rem;
 }
 .content .notices.tip p {
-  border-top: 30px solid #78C578;
-  background: #E6F9E6;
+  border-top: 30px solid #78c578;
+  background: #e6f9e6;
 }
 .content .notices.tip p::after {
   content: "Tip";
@@ -792,8 +821,8 @@ pre .copy-to-clipboard {
   left: 2rem;
 }
 .content .notices.info p {
-  border-top: 30px solid #F0B37E;
-  background: #FFF2DB;
+  border-top: 30px solid #f0b37e;
+  background: #fff2db;
 }
 .content .notices.info p::after {
   content: "Info";
@@ -803,8 +832,8 @@ pre .copy-to-clipboard {
   left: 2rem;
 }
 .content .notices.warning p {
-  border-top: 30px solid #E06F6C;
-  background: #FAE2E2;
+  border-top: 30px solid #e06f6c;
+  background: #fae2e2;
 }
 .content .notices.warning p::after {
   content: "Warning";
@@ -820,7 +849,7 @@ pre .copy-to-clipboard {
   border-left: 2px solid #ff7900;
   margin: 40px 0;
   font-weight: bold;
-  background: #FBFBFB;
+  background: #fbfbfb;
 }
 .content blockquote p {
   margin-bottom: 0 !important;
