--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -6,21 +6,25 @@
         <div class="p-5 shadow rounded">
           <div class="d-flex justify-content-center">
             <div class="text-center m-5">
-              <img
-                class=""
-                src="../assets/images/682044.png"
-                width="100"
-                height="100"
-              />
-              <h3 class="mb-0 mt-3">Need Help</h3>
+              <button class="bg-transparent border-0">
+                <img
+                  class=""
+                  src="../assets/images/682044.png"
+                  width="100"
+                  height="100"
+                />
+                <h3 class="mb-0 mt-3">Need Help</h3>
+              </button>
             </div>
             <div class="text-center m-5">
-              <img
-                src="../assets/images/1067447.png"
-                width="100"
-                height="100"
-              />
-              <h3 class="mb-0 mt-3">Thanks, I'm Ok</h3>
+              <button class="bg-transparent border-0">
+                <img
+                  src="../assets/images/1067447.png"
+                  width="100"
+                  height="100"
+                />
+                <h3 class="mb-0 mt-3">Thanks, I'm Ok</h3>
+              </button>
             </div>
           </div>
         </div>
