--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,21 +1,20 @@
- 
 
-<section class="section">
+<section class="section" *ngIf="currentStep == steps.RESPONSE">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <h2 class="mb-5 font-weight-medium">
-         Eu adipisicing aliquip est qui.
+          Eu adipisicing aliquip est qui.
         </h2>
         <div class="p-5 shadow rounded">
           <div class="d-flex justify-content-center">
             <div class="text-center m-5">
               <img class="" src="../assets/images/682044.png" width="150" height="150" />
-              <h3 class="mb-0 mt-3">Need Help</h3>
+              <h3 class="mb-0 mt-3" (click)="needHelpReponse(true)">Need Help</h3>
             </div>
             <div class="text-center m-5">
-              <img src="../assets/images/1067447.png" width="150" height="150"/>
-              <h3 class="mb-0 mt-3">Thanks, I'm Ok</h3>
+              <img src="../assets/images/1067447.png" width="150" height="150" />
+              <h3 class="mb-0 mt-3" (click)="needHelpReponse(false)">Thanks, I'm Ok</h3>
             </div>
           </div>
         </div>
@@ -24,43 +23,42 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section" *ngIf="currentStep === steps.REQUEST_HELP">
   <div class="container">
-    
+
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow rounded content">
           <h2 class="section-title">Need Help</h2>
-          <form  action="/user-profile">
-            
-          <p>Please provide us with more details </p>
-              <div class="form-group mb-3">
-                  <label for="">Details (optional)</label>
-                  <textarea class="form-control" name="" id="" rows="3"></textarea>
-                </div>
-            <button type="submit" class="btn btn-primary mt-3">Send</button>
+          <form action="/user-profile">
+
+            <p>Please provide us with more details </p>
+            <div class="form-group mb-3">
+              <label for="">Details (optional)</label>
+              <textarea [(ngModel)]="helpDescription" name="helpDescription" [ngModelOptions]="{standalone:true}" class="form-control" name="" id="" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3" (click)="submitEmployeeCrisisResponse()">Send</button>
           </form>
-        </div> 
+        </div>
       </div>
     </div>
   </div>
 </section>
-<section class="section">
+<section class="section" *ngIf="currentStep === steps.RESPONSE_DONE || user?.is_safe ==true">
   <div class="container">
-    
+
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="p-5 shadow rounded content">
-       
-          
-            
+
+
+
           <div>Message ... Aute nisi Lorem veniam nisi ea ad velit occaecat. </div>
-              
-             
-          
-        </div> 
+
+
+
+        </div>
       </div>
     </div>
   </div>
 </section>
-
