--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <h2 class="mb-5 font-weight-medium" *ngIf="user?.name">Welcome {{user?.name}}</h2>
+        <h2 class="mb-5 font-weight-medium" *ngIf="user?.name">Welcome {{user.name}}</h2>
         <div class="p-5 shadow rounded">
           <div class="d-flex justify-content-center">
             <div class="text-center m-5">
