--- a/src/app/safety-check/safety-check.component.html
+++ b/src/app/safety-check/safety-check.component.html
@@ -45,7 +45,7 @@
                                 ({{noResponseEmployees.length || 0}})</button>
                             <button type="button" [ngClass]="[activeTab == 'help'?'btn btn-danger':'nav-link']" (click)="onChangeTab('help')">Need help
                                 ({{needHelpEmployees.length || 0}})</button>
-                            <button [ngClass]="[activeTab == 'safe'?'btn btn-danger':'nav-link']" (click)="onChangeTab('safe')">Marked as save
+                            <button [ngClass]="[activeTab == 'safe'?'btn btn-danger':'nav-link']" (click)="onChangeTab('safe')">Marked as safe
                                 ({{markedSafeEmployees.length || 0}}) </button>
                         </nav>
 
